TP 759 - refined responsive behavior, brightened hero teachers background, fixed Safari spacing issue below menu.

--- a/drupal/profiles/takepart/themes/takepart3/campaigns/teach/css/teach.scss
+++ b/drupal/profiles/takepart/themes/takepart3/campaigns/teach/css/teach.scss
@@ -1,4 +1,5 @@
 @import "compass/css3";
+@import "compass/utilities/general/clearfix";
 @import "typeface";
 
 $page-width: 1000px;
@@ -20,6 +21,7 @@ $body-copy-black: #313131;
 #page-wrapper {
   max-width: $page-width;
   background-color: white;
+  margin: 0 auto;
 }
 
 .page-wrap {
@@ -184,6 +186,10 @@ p {
 ================================================== */
 .page-wordlet-teach-home {
 
+  #page {
+    display: block;
+  }
+
   .content {
     overflow: visible;
     position: relative;
@@ -192,7 +198,7 @@ p {
     background: url('../img/header1_bg.png?1377730837') no-repeat;
     color: black;
     font-size: 26px;
-    margin-bottom: -59px;
+    margin-bottom: -35px;
     padding: 0px 10px;
     width: 400px;
     line-height: 200%;
@@ -204,17 +210,23 @@ p {
     }
   }
   .call-to-share {
-    margin: -25px 0 25px 0;
+    margin: 0px 0 20px 0;
+    position: relative;
+    z-index: 10;
     float: right;
     a {
-      font: 22px $secondary-font;
+      font: normal 18px $secondary-font;
       color: $primary-white;
       .fb {
         background: image-url('social-facebook-white.png') no-repeat;
         @include inline-block;
         width: 30px;
         height: 30px;
-        margin: 0 15px;
+        margin: 0 5px;
+      }
+      &:hover {
+        @include text-shadow(0 0 1px white);
+        text-decoration: none;
       }
     }
   }
@@ -226,6 +238,7 @@ p {
     position: relative;
     z-index: 10;
     vertical-align: top;
+    background-color: black;
     @include inline-block;
     @include box-shadow(0 0 10px black);
   }
@@ -233,7 +246,7 @@ p {
   .social-menu {
     width: 277px;
     background: image-url('paper_right.png') no-repeat right 10px;
-    padding: 100px 30px 0 300px;
+    padding: 90px 30px 40px 300px;
     top: -50px;
     margin-left: -300px;
     margin-right: -$page-margins;
@@ -246,6 +259,7 @@ p {
     h1 { display: none; }
     .item {
       background-repeat: no-repeat;
+      background-position: 0 -7px;
       padding-left: 90px;
 
       &.text { background-image: image-url('social-phone.png'); }
@@ -253,7 +267,7 @@ p {
       &.discussion { background-image: image-url('social-chat.png'); }
 
       p {
-        line-height: 100%;
+        line-height: 130%;
         .terms {
           font-size: 12px;
           line-height: 25px;
@@ -275,7 +289,7 @@ p {
         #edit-actions {
           position: absolute;
           top: 9px;
-          right: 30px;
+          right: 20px;
           margin: 0px;
           input {
             cursor: pointer;
@@ -302,8 +316,11 @@ p {
   }
 
   .page-body-content {
-    background: $primary-white;
-    padding: $page-margins;
+    padding: 100px $page-margins $page-margins $page-margins;
+    margin: -60px 20px 0 6px;
+    @include box-shadow(0 0 6px 4px #A79B84 inset);
+    @include background(linear-gradient(-89deg, #FFFFFF 0%, #DBDBDB 90%, #B1A99A));
+
     img {
       float: right;
       margin-left: $page-margins;
@@ -566,7 +583,7 @@ p {
       width: 111%;
       height: auto;
       position: static;
-      margin: -20px 0px -20px -43px;
+      margin: -20px 0px 0px -43px;
       margin-bottom: -4px;
       margin-top: -20px;
     }
@@ -604,13 +621,20 @@ p {
           }
           &.active {
             background-position: center 3px;
+            background-size: 210px 100%;
           }
         }
       }
     }
   }
 
- .page-wordlet-teach-home {
+  .page-wordlet-teach-home {
+    .call-to-share {
+      float: none;
+      margin: -10px 0 5px;
+    }
+    .content-header {
+    }
    .main-video-wrapper {
       width: 100%;
       height: 368px;
@@ -632,7 +656,11 @@ p {
   }
 }
 
-
+@media (max-width: 1024px) {
+  html {
+    width: 1024px;
+  }
+}
 
 
 
